# priceframe

./: .gitignore  README.md  pyproject.toml
src/priceframe/: __init__.py  core.py  features.py  old_priceframe.py
src/priceframe/io/: __init__.py  bloomberg.py  dblib.py
src/priceframe/io/crypto/: local.py
src/priceframe/io/crypto/exchange/: __init__.py  binance.py  coinbase_pro.py  kraken.py  okx.py
tests/: test_core_priceframe.py  test_features.py
