[project]
name = "priceframe"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Caymaar", email = "119420644+Caymaar@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=21.0.0",
]

[project.scripts]
priceframe = "priceframe:main"

[project.optional-dependencies]
crypto = [
    "ccxt>=4.5.20",
    "requests>=2.32.5",
]
bloomberg = [
    "blpapi>=3.25.10.1",
    "xbbg>=0.7.7",
]
themateam = [
    "dblib>=0.1.1",
]


[tool.uv.sources]
blpapi = { index = "bloomberg" }
DBLib = { git = "https://github.com/themateam-lib/dblib.git" }

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
