[project]
name = "priceframe"
version = "0.2.0"
description = "Provides a canonical, high-performance way to store, manipulate, and analyze financial price data (OHLCV, OHLC or Close only). It combines the speed of PyArrow and Polars with the familiarity of pandas, offering a flexible feature system for technical indicators and quantitative analysis."
readme = "README.md"
authors = [
    { name = "Caymaar", email = "119420644+Caymaar@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=21.0.0",
]

[project.scripts]
priceframe = "priceframe:main"

[project.optional-dependencies]
crypto = [
    "ccxt>=4.5.20",
    "duckdb>=1.4.2",
    "requests>=2.32.5",
]
bloomberg = [
    "blpapi>=3.25.10.1",
    "xbbg>=0.7.7",
]

[tool.uv.sources]
blpapi = { index = "bloomberg" }

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
